falto ponerle token csrf para los formularios administrativos

--- a/src/app/templates/admin/insert.html
+++ b/src/app/templates/admin/insert.html
@@ -22,6 +22,7 @@
     <div class="card shadow p-2">
         <h2 class="mb-2 text-success">Agregar un articulo...</h2>
         <form action="{{ url_for('admin.insert') }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{csrf_token() }}">
             <div class="mb-2">
                 <label for="titulo" class="form-label">Título</label>
                 <input type="text" class="form-control" name="titulo" placeholder="Escribe el título aquí">
