--- a/src/app/templates/admin/delete.html
+++ b/src/app/templates/admin/delete.html
@@ -11,6 +11,7 @@
         <!-- tabla para mostrar los contactos -->
           <div class="scrollable-table">
             <form method="POST" action="{{ url_for('admin.delete') }}"> <!-- Formulario para enviar los datos -->
+                <input type="hidden" name="csrf_token" value="{{csrf_token() }}">
               <table border="1" class="table table-striped table-dark table-hover">
                   <thead>
                       <tr>
