--- a/src/app/templates/admin/edit_full.html
+++ b/src/app/templates/admin/edit_full.html
@@ -22,6 +22,7 @@
     <div class="card shadow p-2">
         <h2 class="mb-2 text-Warning">Editar esta Publicación</h2>
         <form action="{{ url_for('admin.edit_story', article_id=article[0]) }}" method="POST">
+            <input type="hidden" name="csrf_token" value="{{csrf_token() }}">
             <div class="mb-2">
               <label for="titulo" class="form-label text-Warning">ID</label>
               <input type="text" class="form-control" name="ids" value="{{ article[0] }}" readonly>
